fix issue that smaller viewport input element is mislocated; fix issue that on safari result selecting doesnt work

--- a/src/frontend/main.scss
+++ b/src/frontend/main.scss
@@ -196,11 +196,19 @@ body {
     #search_container {
       flex-flow: row wrap;
 
+      #selected_result {
+        order: 2;
+        width: 100%;
+
+        &.selected .external-link {
+          bottom: 12px;
+        }
+      }
+
       #search_input {
         border-radius: 6px;
         border-top-right-radius: 0px;
         border-top-left-radius: 0px;
-        order: 2;
         height: 4rem;
         width: 100%;
         padding: 0 1em;
